-- fix failed tests
