# openapi.json
@@ -8925,6 +8925,32 @@
       }
     },
     "/api/v1/admin/school-profile": {
+      "delete": {
+        "operationId": "reset_school_profile_api_v1_admin_school_profile_delete",
+        "responses": {
+          "204": {
+            "description": "Successful Response"
+          },
+          "401": {
+            "$ref": "#/components/responses/Error401"
+          },
+          "403": {
+            "$ref": "#/components/responses/Error403"
+          },
+          "404": {
+            "$ref": "#/components/responses/Error404"
+          }
+        },
+        "security": [
+          {
+            "HTTPBearer": []
+          }
+        ],
+        "summary": "Reset School Profile",
+        "tags": [
+          "admin-content"
+        ]
+      },
       "put": {
         "operationId": "replace_school_profile_api_v1_admin_school_profile_put",
         "requestBody": {
